feat: implement ANS accounting data processing pipeline