@@ -1,12 +1,10 @@
 package br.com.intuitive.care.service;
 
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestTemplate;
 
-import java.io.InputStream;
-import java.net.URL;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.StandardCopyOption;
+import java.io.IOException;
+import java.nio.file.*;
 
 @Service
 public class AnsFileDownloaderService {
@@ -14,34 +12,39 @@ public class AnsFileDownloaderService {
     private static final String BASE_URL =
             "https://dadosabertos.ans.gov.br/FTP/PDA/demonstracoes_contabeis/2025/";
 
-    private static final Path BASE_DIR =
-            Path.of("data/raw/demonstracoes_contabeis/2025");
+    private static final Path DESTINO =
+            Paths.get("data/raw/demonstracoes_contabeis/2025");
 
-    public void downloadUltimosTrimestres() {
-        try {
-            Files.createDirectories(BASE_DIR);
+    private final RestTemplate restTemplate;
 
-            download("1T2025.zip");
-            download("2T2025.zip");
-            download("3T2025.zip");
-
-        } catch (Exception e) {
-            throw new RuntimeException("Erro ao baixar arquivos da ANS", e);
-        }
+    public AnsFileDownloaderService(RestTemplate restTemplate) {
+        this.restTemplate = restTemplate;
     }
 
-    private void download(String fileName) throws Exception {
-        URL url = new URL(BASE_URL + fileName);
-        Path target = BASE_DIR.resolve(fileName);
+    public void downloadUltimosTrimestres() {
 
-        if (Files.exists(target)) {
-            System.out.println(fileName + " já existe, pulando download.");
-            return;
-        }
+        try {
+            Files.createDirectories(DESTINO);
 
-        try (InputStream in = url.openStream()) {
-            Files.copy(in, target, StandardCopyOption.REPLACE_EXISTING);
-            System.out.println("Baixado: " + fileName);
+            String[] arquivos = {
+                    "1T2025.zip",
+                    "2T2025.zip",
+                    "3T2025.zip"
+            };
+
+            for (String nomeArquivo : arquivos) {
+                byte[] conteudo = restTemplate.getForObject(
+                        BASE_URL + nomeArquivo,
+                        byte[].class
+                );
+
+                if (conteudo != null) {
+                    Files.write(DESTINO.resolve(nomeArquivo), conteudo);
+                }
+            }
+
+        } catch (IOException e) {
+            throw new RuntimeException("Erro ao baixar arquivos da ANS", e);
         }
     }
 }
